clusters/beryjuorg-prd/registry/standalone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-standalone
  namespace: registry
spec:
  ports:
  - name: http
    port: 5000
    targetPort: http
  - name: http-metrics
    port: 5001
    targetPort: http-metrics
  selector:
    app.kubernetes.io/name: registry-standalone
  type: ClusterIP
